--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
     padding: 0;
     margin: 0;
-
 }
 
 body {
@@ -10,15 +9,11 @@ body {
 
 .main {
     background-image: url("assets/imgs/bg.jpg");
-
-
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: max(1200px, 100vw);
-    height: 644px;
+    background-size: cover; /* Changed to cover for responsiveness */
+    height: 100vh; /* Changed to 100vh for responsiveness */
     position: relative;
-
-
 }
 
 .main.box {
@@ -31,13 +26,11 @@ body {
 }
 
 nav {
-    max-width: 80vw;
+    max-width: 90vw; /* Adjusted for responsiveness */
     margin: auto;
     display: flex;
     align-items: center;
-    /* justify-content: space-around; */
     justify-content: space-between;
-
 }
 
 nav img {
@@ -45,7 +38,6 @@ nav img {
     width: 120px;
     position: relative;
     z-index: 10;
-
 }
 
 nav button {
@@ -64,7 +56,6 @@ nav button {
     position: relative;
     font: message-box;
     font-size: larger;
-
 }
 
 .sep {
@@ -78,8 +69,6 @@ nav button {
     background-color: transparent;
     color: white;
     cursor: pointer;
-
-
 }
 
 .btn-red {
@@ -93,22 +82,17 @@ nav button {
 .btn-red-sm {
     background-color: red;
     color: white;
-
 }
 
 .main input {
     padding: 13px 30px 13px 0;
     font-size: 20px;
     border-radius: 7px;
-
-    /* background-color:transparent; */
-
 }
 
 .first {
     display: flex;
-
-    max-width: 50vw;
+    max-width: 90vw; /* Adjusted for responsiveness */
     margin: auto;
     color: white;
     justify-content: center;
@@ -141,8 +125,6 @@ nav button {
     left: 74px;
     height: 242px;
     width: 300px;
-    
-
 }
 
 .hey img {
@@ -161,13 +143,11 @@ nav button {
 
 .contact-section {
     width: 100%;
-    max-width: 40rem;
+    max-width: 90vw; /* Adjusted for responsiveness */
     margin-left: auto;
     margin-right: auto;
     padding: 3rem 1rem;
 }
-
-
 
 .contact-title {
     font-size: 1.875rem;
@@ -183,7 +163,6 @@ nav button {
     display: grid;
     gap: 1rem;
     margin-top: 2rem;
-    
 }
 
 .form-group {
@@ -230,4 +209,139 @@ nav button {
     color: #fff;
     padding: 13px 5px;
     border-radius: 0.375rem;
+}
+
+section.first>div {
+    display: flex;
+    flex-direction: column;
+    padding: 34px 0;
+}
+
+section.first>div :nth-child(1) {
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+section.first>div :nth-child(2) {
+    font-size: 24px;
+}
+
+.faq h2 {
+    text-align: center;
+    font-size: 48px;
+}
+
+.faq {
+    background: black;
+    color: white;
+    padding: 34px;
+}
+
+.faqbox:hover {
+    background-color: #414141;
+    color: white;
+}
+
+.faqbox svg {
+    filter: invert(1);
+}
+
+.faqbox {
+    transition: all 1s ease-out;
+    font-size: 24px;
+    display: flex;
+    justify-content: space-between;
+    background-color: #2d2d2d;
+    padding: 24px;
+    max-width: 90vw; /* Adjusted for responsiveness */
+    margin: 34px auto;
+    cursor: pointer;
+}
+
+footer {
+    color: white;
+    max-width: 90vw; /* Adjusted for responsiveness */
+    margin: auto;
+    padding: 60px;
+}
+
+footer .questions {
+    padding: 34px 0;
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: white;
+}
+
+@media screen and (max-width: 1300px) {
+    nav{
+        max-width: 90vw;
+    }
+
+    .first {
+        flex-wrap: wrap;
+    }
+
+    .secImg img {
+        width: 305px;
+    }
+
+    .secImg video {
+        width: 305px;
+    }
+
+    .hero> :nth-child(1) {
+        font-size: 32px;
+    }
+
+    .hero> :nth-child(2) {
+        font-size: 18px;
+    }
+
+    .hero> :nth-child(3) {
+        font-size: 18px;
+    }
+
+    .hero-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+    }
+
+    .faq h2 {
+        text-align: center;
+        font-size: 32px;
+    }
+
+    footer {
+        max-width: 90vw;
+        padding: 75px 0;
+    }
+
+    .footer-item{
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    .footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 25px;
+    }
+}
+
+.footer a {
+    font-size: 14px;
+    color: white;
+}
+
+.footer-item {
+    display: flex;
+    flex-direction: column;
+    gap: 23px;
 }
